examples/httpd-node-selector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httpd
spec:
  nodeSelector:
    os: 'linux'
  containers:
    - name: httpd
      image: httpd
      ports:
        - containerPort: 80
