examples/httpd-with-annotation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httpd-with-annotation
  labels:
    team: hrd
    version: 1.3.2
    environment: qa
  annotations:
    description: Ini adalah aplikasi yang sedang ditahap staging untuk human resource team.
spec:
  containers:
    - name: httpd
      image: httpd
      ports:
        - containerPort: 80
