examples/httpd-with-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httpd-with-labels
  labels:
    team: marketing
    version: 1.3.4
    environment: production
spec:
  containers:
    - name: httpd
      image: httpd
      ports:
        - containerPort: 80
