examples/httpd-with-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httpd-with-probe
spec:
  containers:
    - name: httpd
      image: httpd
      ports:
        - containerPort: 80
      livenessProbe:
        httpGet:
          path: /404
          port: 80
        initialDelaySeconds: 5
        periodSeconds: 5
        timeoutSeconds: 1
        successThreshold: 1
        failureThreshold: 3
