examples/nodejs-api.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodejs-restapi
  labels:
    name: nodejs-restapi
spec:
  containers:
    - name: nodejs-restapi
      image: pisckitama/nodejs-restapi
