examples/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-restapi
  labels:
    name: nodejs-restapi
spec:
  replicas: 3
  selector:
    matchLabels:
      name: nodejs-restapi
  template:
    metadata:
      name: nodejs-restapi
      labels:
        name: nodejs-restapi
    spec:
      containers:
        - name: nodejs-restapi
          image: pisckitama/nodejs-restapi:1.1
          ports:
            - containerPort: 4021
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-restapi-service
spec:
  type: NodePort
  selector:
    name: nodejs-restapi
  ports:
    - port: 4021
      targetPort: 4021
      nodePort: 30001
