examples/multi-container-pod.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
spec:
  selector:
    name: httpd
  ports:
    - port: 8080
      targetPort: 80
      name: httpd
    - port: 3000
      targetPort: 3000
      name: nodejs-web

---
apiVersion: v1
kind: Pod
metadata:
  name: curl
  labels:
    name: curl
spec:
  containers:
    - name: curl
      image: pisckitama/httpd-curl
