examples/service-httpd-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
spec:
  type: LoadBalancer
  selector:
    name: httpd
  ports:
    - port: 80
      targetPort: 80
