examples/service-httpd-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
spec:
  type: NodePort
  selector:
    name: httpd
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31102
