examples/service-httpd.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
spec:
  selector:
    name: httpd
  ports:
    - port: 8080
      targetPort: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: curl
  labels:
    name: curl
spec:
  containers:
    - name: curl
      image: pisckitama/httpd-curl
