examples/service-httpd-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
spec:
  selector:
    name: httpd
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd-ingress
  labels:
    name: httpd-ingress
spec:
  rules:
    - host: k8s-master.pisckilab.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: httpd-service
                port:
                  number: 80
